--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ jobs:
   update-pr-preview:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: ${{ format('actions/checkout@refs/pull/{0}/merge', github.event.number) }}
     - name: update-pr-preview
       uses: ./tools/docker/github
       env:
