Revert "Try explicit syntax"
This reverts commit 94accc17783ddc35e88896d1d2dffa44eff26862.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ jobs:
   update-pr-preview:
     runs-on: ubuntu-latest
     steps:
-    - uses: ${{ format('actions/checkout@refs/pull/{0}/merge', github.event.number) }}
+    - uses: actions/checkout@master
     - name: update-pr-preview
       uses: ./tools/docker/github
       env:
