Specify reference to check out

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,10 +1,12 @@
-on: [pull_request, delete]
+on: pull_request
 name: Synchronize the Pull Request Preview
 jobs:
   update-pr-preview:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1.0.0
+      with:
+        ref: refs/heads/master
     - name: update-pr-preview
       uses: ./tools/docker/github
       env:
