--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,6 +4,9 @@ jobs:
   update-pr-preview:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1.0.0
+      with:
+        ref: refs/heads/master
     - name: update-pr-preview
       uses: ./tools/docker/github
       env:
