--- a/.github/workflows/pull_request_previews.yml
+++ b/.github/workflows/pull_request_previews.yml
@@ -15,6 +15,7 @@ jobs:
           --host https://api.github.com
           --github-project web-platform-tests/wpt-actions-test
           --remote origin
+          --window 300
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
