Refactor a whole bunch

--- a/.github/workflows/detect_pull_request_preview.yml
+++ b/.github/workflows/detect_pull_request_preview.yml
@@ -9,10 +9,11 @@ jobs:
       run: pip install requests
     - name: Detect deployment
       run:
-        ./tools/ci/detect_pr_preview.py
+        ./tools/ci/pr_preview.py
           --host http://api.github.com
-          --target https://wptpr.live
           --github-project web-platform-tests/wpt-actions-test
+          detect
+          --target https://wptpr.live
           --timeout 600
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
