--- a/.github/workflows/pull_request_previews.yml
+++ b/.github/workflows/pull_request_previews.yml
@@ -14,6 +14,7 @@ jobs:
         ./tools/ci/pr_preview.py
           --host https://api.github.com
           --github-project web-platform-tests/wpt-actions-test
+          --target http://s92097608.onlinehome.us/tmp
           synchronize
           --remote origin
           --window 480
