--- a/.github/workflows/detect_pull_request_preview.yml
+++ b/.github/workflows/detect_pull_request_preview.yml
@@ -1,5 +1,5 @@
 name: Detect Pull Request Preview
-on: deployment_status
+on: deployment
 jobs:
   detect-deployment:
     runs-on: ubuntu-18.04
@@ -12,8 +12,8 @@ jobs:
         ./tools/ci/pr_preview.py
           --host http://api.github.com
           --github-project web-platform-tests/wpt-actions-test
-          --target http://s92097608.onlinehome.us/tmp
           detect
+          --target http://s92097608.onlinehome.us/tmp
           --timeout 600
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
