--- a/.github/workflows/detect_pull_request_preview.yml
+++ b/.github/workflows/detect_pull_request_preview.yml
@@ -7,8 +7,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install dependency
       run: pip install requests
-    - name: Debug deployment
+    - name: Detect deployment
       run:
-        ./tools/ci/debug_deploy.py
+        ./tools/ci/pr_preview.py
+          --host http://api.github.com
+          --github-project web-platform-tests/wpt-actions-test
+          detect
+          --target http://s92097608.onlinehome.us/tmp
+          --timeout 600
       env:
         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
