--- a/.github/workflows/detect_pull_request_preview.yml
+++ b/.github/workflows/detect_pull_request_preview.yml
@@ -9,11 +9,6 @@ jobs:
       run: pip install requests
     - name: Detect deployment
       run:
-        ./tools/ci/pr_preview.py
-          --host http://api.github.com
-          --github-project web-platform-tests/wpt-actions-test
-          detect
-          --target http://s92097608.onlinehome.us/tmp
-          --timeout 600
+        ./tools/ci/debug_deploy.py
       env:
         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
