--- a/.github/workflows/detect_pull_request_preview.yml
+++ b/.github/workflows/detect_pull_request_preview.yml
@@ -5,6 +5,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
+      # By default, the "checkout" Action will attempt to check out the
+      # revision to be deployed. Because it does not fetch GitHub Pull Request
+      # branches, this will fail.
+      with:
+        ref: refs/heads/master
     - name: Install dependency
       run: pip install requests
     - name: Detect deployment
